# python_ml_lectures

./: 404.html  Makefile  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: index.md
docs/onboarding/: introduction.md  linear_regression.md  python101.md  test.py
docs/ridge_regression/: index.md
notebooks/: ridge_regression_1d.py
onboarding/introduction/: index.html
onboarding/linear_regression/: index.html
onboarding/numpy101/: index.html
onboarding/python101/: index.html
ridge_regression/: index.html
search/: search_index.json
source/: conf.py  index.md  lecture01.md  lecture02.md
