[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "intro_ml_lecture"
version = "0.1.0"
description = "Lecture notes for Intro to Machine Learning"
authors = ["Brian Staber <brian.staber@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
sphinx = "^8.2.3"
furo = "^2024.6.4"
myst-parser = "^4.0.0"
sphinx-inline-tabs = "^2023.4.21"
sphinx-copybutton = "^0.5.2"
mkdocs = "^1.6.1"
mkdocs-marimo = "^0.2.1"
marimo = "^0.14.10"
mkdocs-material = "^9.6.15"
pymdown-extensions = "^10.16"
matplotlib = "^3.10.3"
numpy = "^2.3.1"
plotly = "^6.2.0"
pandas = "^2.3.0"
ruff = "^0.12.2"
htmlmin2>=0.1.13,<0.2